# mahgetNewGRs

./: .gitattributes  .gitignore  README.md  SPEC.md  depts.txt  infos.md  makefile  pyproject.toml  todo.txt
.github/workflows/: nightly-download-pdfs.yml  wrk-download-upload-pdfinfo.yml
import/: README.md  import_config.yaml
import/grinfo/: 1874.jsonl  1885.jsonl  1886.jsonl  1908.jsonl  1916.jsonl  1924.jsonl  1927.jsonl  1928.jsonl  1929.jsonl  1930.jsonl  1931.jsonl  1932.jsonl  1933.jsonl  1934.jsonl  1935.jsonl  1936.jsonl  1937.jsonl  1938.jsonl  1939.jsonl  1940.jsonl  1941.jsonl  1947.jsonl  1948.jsonl  1949.jsonl  1950.jsonl  1951.jsonl  1952.jsonl  1953.jsonl  1954.jsonl  1955.jsonl  1956.jsonl  1957.jsonl  1958.jsonl  1959.jsonl  1960.jsonl  1961.jsonl  1962.jsonl  1963.jsonl  1964.jsonl  1965.jsonl  (+48 more)
import/pdfinfos/: 1874.jsonl  1885.jsonl  1886.jsonl  1908.jsonl  1916.jsonl  1924.jsonl  1927.jsonl  1928.jsonl  1929.jsonl  1930.jsonl  1931.jsonl  1932.jsonl  1933.jsonl  1934.jsonl  1935.jsonl  1936.jsonl  1937.jsonl  1938.jsonl  1939.jsonl  1940.jsonl  1941.jsonl  1947.jsonl  1948.jsonl  1949.jsonl  1950.jsonl  1951.jsonl  1952.jsonl  1953.jsonl  1954.jsonl  1955.jsonl  1956.jsonl  1957.jsonl  1958.jsonl  1959.jsonl  1960.jsonl  1961.jsonl  1962.jsonl  1963.jsonl  1964.jsonl  1965.jsonl  (+61 more)
import/src/: append_ledger.py  archive_job.py  backfill_lfs_path.py  cli.py  command_core.py  commands.py  department_codes.py  download_pdf_job.py  download_pdfs.py  download_upload_pdfinfo_wrk.py  gr_site_job.py  import_config.py  import_pdf_job.py  import_pdfs_job.py  (+13 more)
(+186 files in other folders)
